applications/openeuler-cn4-copr-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: copr-ingress
  namespace: fedora-copr-prod-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: our.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: copr-frontend
          servicePort: 80
        path: /
      - backend:
          serviceName: copr-distgit
          servicePort: 80
        path: /cgit/
      - backend:
          serviceName: copr-distgit
          servicePort: 80
        path: /cgit-data/
      - backend:
          serviceName: copr-backend
          servicePort: 80
        path: /results/
      - backend:
          serviceName: copr-distgit
          servicePort: 80
        path: /per-task-logs/
  tls:
    - hosts:
        - our.openeuler.openatom.cn
      secretName: copr-frontend-tls
